...
    <string name="newcastle_logo">Newcastle University Logo</string>
    <string name="welcome_text">Welcome!</string>
    <string name="open_day_button">Open Day</string>
    <string name="post_app_day_button">Post Application Visit Day</string>

    <!-- FAQ strings -->
    <string name="faqTitle">Frequently Asked Questions</string>

    <string name="question1">Is there disabled access to the building?</string>
    <string name="answer1">Yes, the entrances are wheelchair accessible and there is lift access to the first four floors of the building.</string>

    <string name="question2">Where are the medical centers located near the USB?</string>
    <string name="answer2">There are first aid trained staff on premises to assist in medical needs as well as Newcastle Hospital close by if further medical help is required.</string>

    <string name="question3">Is food available within the USB?</string>
    <string name="answer3">There is food available within the building\'s cafeteria on the ground floor.</string>

    <string name="question4">What nearby transport links are available?</string>
    <string name="answer4">The closest bus and metro stations to the USB are just outside St. James\' Park, with the bus station on Barrack Road and a metro stop at the football grounds. The USB is also located just a 10 minute walk from the train station.</string>

    <string name="question5">Where are toilets located?</string>
    <string name="answer5">Toilets are located on every floor in the building, disabled toilets are available on all floors with disabled access.</string>

    <!-- Open Day Strings -->
    <string name="open_Day_Info">The open days here at Newcastle are a great way to explore and experience the Newcastle university campus directly.
        During Summer and Autumn annually the university hosts the open days for students interested in seeking a higher education after school.\n\n
        On the day you’ll be provided with a number of activities and aimed to help you learn more about the USB,
...
    <string name="university_stops">University</string>
    <string name="accomodation_stops">Accommodation</string>

    <array name="pre_config_tour"></array>

    <!-- Nav Bar Strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>

