...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".FaqFragment">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="331dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:text="@string/faqTitle"
        android:onClick="getDocumentAndDisplay"
        android:textColor="#000000"
...
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question4" />

        <TextView
            android:id="@+id/text_view_faq"
            android:layout_width="333dp"
            android:layout_height="131dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="@font/helvetica_family"
            android:textColor="#000000"
...
